# Disk-Space

./: .editorconfig  LICENSE  README.md  io.github.vtorbr.disk_space.yml  meson.build
.github/workflows/: main.yml
data/: disk-space.desktop  disk-space.metainfo.xml.in
po/: POTFILES  io.github.vtorbr.disk_space.pot  pt.po
source/: Application.vala  Window.vala  Window.vala~
